--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,9 @@ zstd = { version = "0.13.3", optional = true, default-features = false }
 crossterm = "0.28.1"
 indicatif = "0.17.11"
 rayon = "1.5"
-memmap2 = "0.9.5"
+memmap2 = "0.9.0"
 crossbeam-channel = "0.5.14"
+sysinfo = { version = "0.34.2", features = ["disk"] }
 [dev-dependencies]
 time = { workspace = true, features = ["formatting", "macros"] }
 
